[gd_scene load_steps=11 format=3 uid="uid://ccpeukrdsfbkm"]

[ext_resource type="Texture2D" uid="uid://cskh758f74ngv" path="res://scenes/balatro/visuals/Tiles_A_white.png" id="1_3sp1f"]
[ext_resource type="Shader" path="res://scenes/shared/shaders/fake_3D.gdshader" id="1_7h7yf"]
[ext_resource type="Shader" path="res://scenes/shared/shaders/dissolve.gdshader" id="1_8jfk0"]
[ext_resource type="Script" path="res://scenes/balatro/scripts/card.gd" id="1_borcn"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_kntej"]
seed = -15
frequency = 0.0021
fractal_octaves = 4

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_bboy4"]
noise = SubResource("FastNoiseLite_kntej")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3ph3s"]
resource_local_to_scene = true
shader = ExtResource("1_8jfk0")
shader_parameter/dissolve_value = 1.0
shader_parameter/burn_size = 0.03
shader_parameter/burn_color = Color(1.5, 0.924, 0, 1)
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_bboy4")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7aqjh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cho03"]
resource_local_to_scene = true
shader = ExtResource("1_7h7yf")
shader_parameter/rect_size = Vector2(152, 207)
shader_parameter/fov = 90.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xsth3"]
size = Vector2(130, 175)

[node name="Card" type="Button"]
material = SubResource("ShaderMaterial_3ph3s")
custom_minimum_size = Vector2(152, 207)
offset_right = 152.0
offset_bottom = 207.0
pivot_offset = Vector2(76, 103.5)
theme_override_styles/normal = SubResource("StyleBoxEmpty_7aqjh")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7aqjh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7aqjh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7aqjh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7aqjh")
script = ExtResource("1_borcn")
velocity_multiplier = 1.0

[node name="Shadow" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0.168627)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3sp1f")
expand_mode = 1

[node name="CardTexture" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_cho03")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3sp1f")
expand_mode = 1

[node name="DestroyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DestroyArea"]
position = Vector2(75, 104.5)
shape = SubResource("RectangleShape2D_xsth3")
disabled = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
